keyfile: fix handling of enum/flags properties after fcfb4b40 (bgo #738585)

When some properties got converted to G_TYPE_ENUM and G_TYPE_FLAGS
the keyfile plugin was not updated to handle these types.

https://bugzilla.gnome.org/show_bug.cgi?id=738585