src/settings/plugins/keyfile/utils.c
@@ -229,6 +229,7 @@ nm_keyfile_plugin_kf_set_##stype (GKeyFile *kf, \
 
 DEFINE_KF_WRAPPER(string, gchar*, const gchar*);
 DEFINE_KF_WRAPPER(integer, gint, gint);
+DEFINE_KF_WRAPPER(uint64, guint64, guint64);
 DEFINE_KF_WRAPPER(boolean, gboolean, gboolean);
 DEFINE_KF_WRAPPER(value, gchar*, const gchar*);
 
